Fix vertical spacing on headings and code block

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -53,7 +53,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0 0 0.5rem 0;
+  margin: 4rem 0 0.5rem 0;
   color: rgb(var(--black));
   line-height: 1.2;
 }
@@ -110,6 +110,7 @@ code {
   font-size: 18px;
 }
 pre {
+  margin: 2rem 0;
   padding: 1.5em;
   border-radius: 8px;
 }
